--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "commonhealth-test",
+  "homepage": "https://yanennnnn.github.io/commonhealth-test",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "gh-pages": "^6.0.0",
     "swiper": "^10.2.0",
     "vue": "^3.3.4"
   },
