--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "commonhealth-test",
-  "homepage": "https://yanennnnn.github.io/commonhealth-test",
+  "homepage": "https://yanennnnn.github.io/commonhealth-test/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
