--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "gh-pages": "^6.0.0",
     "swiper": "^10.2.0",
     "vue": "^3.3.4"
